--- a/templates/info.html
+++ b/templates/info.html
@@ -1,7 +1,7 @@
 <dl id="download-help">
   <dd>1.</dd>
   <dt>
-    <div class="important">下载安装 跨站cookie UserScirpt / 本地</div>
+    <div class="important">下载安装 跨站cookie <a href="#">UserScirpt</a> / <a href="#">本地</a></div>
     <div>由于迅雷离线需要验证用户的cookie，我们需要通过一个userscirpt（类似浏览器插件）来完成跨站cookie注入。</div>
   </dt>
   <dd>2.</dd>
@@ -16,6 +16,6 @@
   </dt>
 </dl>
 <dl id="author-info">
-  <dd>WriteBy</dd> <dt>+足兆叉虫</dt>
-  <dd>PowerBy</dd> <dt>+Martian Z</dt>
+    <dd>WriteBy</dd> <dt>+<a href="https://plus.google.com/u/0/109559563687025213768">足兆叉虫</a></dt>
+    <dd>PowerBy</dd> <dt>+<a href="https://plus.google.com/u/0/100204491389909955903">Martian Z</a></dt>
 </dl>
