--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,15 @@
   <div id="layout-background">
     <div class="logo">
       <div class="text">
-        <span id="text-loli">LOLI</span><span id="text-dot">・</span><span id="text-lu">撸</span>
+        <span id="text-loli">LOLI</span><span id="text-dot">・</span>
       </div>
+      <span id="text-lu">撸</span>
     </div>
   </div>
   <div id="layout-info">
-    <div class="info-box">{% include info.html %}</div>
+      <div class="info-box">{% block info %}{% end %}</div>
   </div>
-  <div id="layout-list"> </div>
+  <div id="layout-list">{% block body %}{% end %}</div>
   {% block foot %}{% end %}
   <div class="clearfix"><div>
 </body>
