--- a/templates/info.html
+++ b/templates/info.html
@@ -12,7 +12,7 @@
   <dd>3.</dd>
   <dt>
     <div class="important">开始下载吧！</div>
-    <div>或者，您也可以添加一个资源！</div>
+    <div>或者，您也可以<a href="#">添加一个资源</a>！</div>
   </dt>
 </dl>
 <dl id="author-info">
