--- a/templates/base.html
+++ b/templates/base.html
@@ -9,23 +9,9 @@
 <link rel="stylesheet" href="{{static_url('css/reset.css')}}" type="text/css" />
 <link rel="stylesheet" href="{{static_url('css/base.css')}}" type="text/css" />
 {% block head %}{% end %}
-<style>
-</style>
 </head>
 <body>
-  <div id="layout-background">
-    <div class="logo">
-      <div class="text">
-        <span id="text-loli">LOLI</span><span id="text-dot">・</span>
-      </div>
-      <span id="text-lu">撸</span>
-    </div>
-  </div>
-  <div id="layout-info">
-      <div class="info-box">{% block info %}{% end %}</div>
-  </div>
-  <div id="layout-list">{% block body %}{% end %}</div>
-  {% block foot %}{% end %}
-  <div class="clearfix"><div>
+{% block body %}{% end %}
 </body>
+{% block foot %}{% end %}
 </html>
