--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,48 @@
 {% extends base.html %}
 
+{% block head %}
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
+<script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
+<link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
+{% end %}
+
+{% block body %}
+  <div id="layout-background">
+    <div class="logo">
+      <div class="text">
+        <span id="text-loli">LOLI</span><span id="text-dot">・</span>
+      </div>
+      <span id="text-lu">撸</span>
+    </div>
+  </div>
+  <div id="layout-info">
+      <div class="info-box">{% block info %}{% end %}</div>
+  </div>
+  <div id="layout-list">{% block list %}{% end %}</div>
+  <div class="clearfix"><div>
+{% end %}
+
 {% block info %}
     {% include info.html %}
 {% end %}
 
-{% block body %}
+{% block list %}
+<div class="add-task-box">
+  <div class="add-task">
+    <input name="task-url" id="task-url" />
+    <div class="add-task-bottom">+</div>
+  </div>
+</div>
 <ul class="task-list">
   <li class="push-top"></li>
   {% for task in tasks %}
   <li class="task-item">
-    <div class="process-bar waiting" style="width: 0%"></div>
-    <a href="#"><div class="tname"><span class="p1">{{ task[:-20] }}</span><span class="p2">{{ task[-20:]}}</span></div></a>
-    <div class="info"><span class="file-size">562M</span><span class="date">2011-11-11</span></div>
+    {% if task['status'] in ('waiting', 'downloading') %}
+    <div class="process-bar {{ task['status'] }}" style="width: {{ 100-task['process'] }}%"></div>
+    {% end %}
+    <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task['task_id'] }}"><div class="tname"><span class="p1">{{ task['taskname'] > 15 and task['taskname'][:-15] or task['taskname'] }}</span><span class="p2">{{ task['taskname'] > 15 and task['taskname'][-15:]}}</span></div></a>
+    <div class="info"><span class="file-size">{{ format_size(task['size']) }}</span><span class="date">2011-11-11</span></div>
     <div class="clearfix"></div>
   </li>
   {% end %}
@@ -36,5 +67,36 @@
   }
   OnResize();
   window.onresize = OnResize;
+
+  $(".get-lixian-url").fancybox({ width: 730 });
+  $(".add-task-bottom").click(function() {
+    if ($(".add-task-box").attr("class").indexOf("show") != -1) {
+      if($(".add-task input").val() != "") {
+        $(".add-task-bottom").text("O");
+        $.ajax({
+          type: "post",
+          url: "/add_task",
+          data: {
+            url: $(".add-task input").val()
+          },
+          dataType: "json",
+          success: function(data) {
+            if (data.result) {
+              location.reload();
+            } else {
+              $(".add-task-bottom").text("X");
+              $(".add-task input").val("");
+              $(".add-task-box, .add-task input").removeClass("show");
+            }
+          },
+        });
+      } else {
+        $(".add-task-box, .add-task input").removeClass("show");
+      }
+    } else {
+      $(".add-task-bottom").text("+");
+      $(".add-task-box, .add-task input").addClass("show");
+    }
+  });
 </script>
 {% end %}
