--- a/templates/info.html
+++ b/templates/info.html
@@ -1,7 +1,7 @@
 <dl id="download-help">
   <dd>1.</dd>
   <dt>
-    <div class="important">下载安装 跨站cookie <a href="#">UserScirpt</a> / <a href="#">本地</a></div>
+  <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地</a></div>
     <div>由于迅雷离线需要验证用户的cookie，我们需要通过一个userscirpt（类似浏览器插件）来完成跨站cookie注入。</div>
   </dt>
   <dd>2.</dd>
@@ -12,7 +12,7 @@
   <dd>3.</dd>
   <dt>
     <div class="important">开始下载吧！</div>
-    <div>或者，您也可以<a href="#">添加一个资源</a>！</div>
+    <div>或者，您也可以添加一个资源！</div>
   </dt>
 </dl>
 <dl id="author-info">
