--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -2,12 +2,12 @@
 
 {% block body %}
 <div class="lixian-box">
+    <div class="cross-cookie" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}"><a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank">您尚未安装cross-cookie UserScript 点击前往安装</a></div>
   <div class="task-info">
     <div class="task-name">{{ task['taskname'] }}</div>
     <div class="task-botton {{ task['status'] }}">
         {% if task['status'] == "finished" %}分享{% elif task['status'] == "downloading" %}下载中{% else %}队列中{% end %}
     </div>
-
     <div class="clearfix"></div>
   </div>
   <ul class="file-list">
@@ -17,7 +17,7 @@
     <div class="process-bar {{ file['status'] }}" style="width: {{ 100-file['process'] }}%"></div>
     {% end %}
     {% if file['lixian_url'] %}
-    <a href="{{ file['lixian_url'] }}"><div class="file-title">{{ file['title'] }}</div></a>
+    <a href="{{ file['lixian_url'] }}" target="_blank"><div class="file-title">{{ file['title'] }}</div></a>
     {% else %}
     <div class="file-title">{{ file['title'] }}</div>
     {% end %}
