--- a/templates/index.html
+++ b/templates/index.html
@@ -36,16 +36,8 @@
 </div>
 <ul class="task-list">
   <li class="push-top"></li>
-  {% for task in tasks %}
-  <li class="task-item">
-    {% if task['status'] in ('waiting', 'downloading') %}
-    <div class="process-bar {{ task['status'] }}" style="width: {{ 100-task['process'] }}%"></div>
-    {% end %}
-    <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task['task_id'] }}" target="_blank" title="{{ task['taskname'] }}"><div class="tname"><span class="p1">{{ task['taskname'] > 15 and task['taskname'][:-15] or task['taskname'] }}</span><span class="p2">{{ task['taskname'] > 15 and task['taskname'][-15:]}}</span></div></a>
-    <div class="info"><span class="file-size">{{ format_size(task['size']) }}</span><span class="date">2011-11-11</span></div>
-    <div class="clearfix"></div>
-  </li>
-  {% end %}
+  {% raw modules.TaskItems(tasks) %}
+  <li class="push-bottom"></li>
 </ul>
 {% end %}
 
@@ -68,8 +60,30 @@
   OnResize();
   window.onresize = OnResize;
 
+  //load next page
+  $(".task-list").bind("scroll", function() {
+    if ($(".task-list .push-bottom").offset().top  < $(window).height() * 1.2) {
+      // load next page
+      $.get("/next",
+            {s: $(".task-item:last").attr("data-task-id")},
+            function(content) {
+              if ($.trim(content) == "") {
+                $(".task-list").unbind("scroll");
+              } else {
+                $(".task-list .push-bottom").before(content);
+              }
+            });
+    }
+  });
+
+  //get lixian url fancybox
   $(".get-lixian-url").fancybox({ width: 700 });
+
+  //add task
   $(".add-task-bottom").click(function() {
+    if ($(".add-task-bottom").text() == "O") {
+       return false;
+    }
     if ($(".add-task-box").attr("class").indexOf("show") != -1) {
       if($(".add-task input").val() != "") {
         $(".add-task-bottom").text("O");
