--- a/templates/info.html
+++ b/templates/info.html
@@ -1,21 +1,21 @@
 <dl id="download-help">
   <dd>1.</dd>
   <dt>
-  <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地</a></div>
-    <div>由于迅雷离线需要验证用户的cookie，我们需要通过一个userscirpt（类似浏览器插件）来完成跨站cookie注入。</div>
+  <div class="important">下载安装UserScript支持插件。</div>
+  <div>
+      <b>Firefox:</b> <a href="https://addons.mozilla.org/zh-CN/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> / <a href="https://addons.mozilla.org/zh-CN/firefox/addon/scriptish/" target="_blank">Scriptish</a><br />
+      <b>Chrome:</b> <a href="https://chrome.google.com/webstore/detail/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Tampermonkey</a> <br />
+      <b>Safari:</b> <a href="http://d.hatena.ne.jp/os0x/20100612/1276330696" target="_blank">NinjaKit</a> <br />
+  </div>
   </dt>
   <dd>2.</dd>
   <dt>
-    <div class="important">退出已经登录的迅雷帐号</div>
-    <div>注入的cookie可能和您原有的帐号冲突。在使用前请退出已经登录的迅雷帐号。</div>
+  <div class="important">下载安装 跨站cookie <a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
+    <div>由于迅雷离线需要验证用户的cookie，我们需要通过一个userscirpt（类似浏览器插件）来完成跨站cookie注入。</div>
   </dt>
   <dd>3.</dd>
   <dt>
     <div class="important">开始下载吧！</div>
     <div>或者，您也可以添加一个资源！</div>
   </dt>
-</dl>
-<dl id="author-info">
-    <dd>WriteBy</dd> <dt>+<a href="https://plus.google.com/u/0/109559563687025213768">足兆叉虫</a></dt>
-    <dd>PowerBy</dd> <dt>+<a href="https://plus.google.com/u/0/100204491389909955903">Martian Z</a></dt>
 </dl>
