--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,10 @@
     </div>
   </div>
   <div id="layout-info">
-      <div class="info-box">{% block info %}{% end %}</div>
+      <div class="info-box">{% include info.html %}{% include author_info.html %}</div>
   </div>
   <div id="layout-list">{% block list %}{% end %}</div>
   <div class="clearfix"><div>
-{% end %}
-
-{% block info %}
-    {% include info.html %}
 {% end %}
 
 {% block list %}
