refix goback-button decoration bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,11 +58,8 @@ body { position: relative; }
     #layout-info .info-box #author-info dt { float: right; background: #eee; border: 1px solid #ddd; padding: 0 1px; color: #888; border-radius: 2px; }
     #layout-info .info-box #author-info dt a { color: #36C; text-decoration: none; }
 
+    #layout-info .info-box a.goback { text-decoration: none; }
     #layout-info .info-box #goback-button { position: absolute; left: 0; bottom: 30px; font-size: 20px; font-weight: bold; padding: 10px 35px 10px 20px; background-color: #666; color: #fff; border-top-right-radius: 10px; border-bottom-right-radius: 10px; }
-    #layout-info .info-box #goback-button a,
-    #layout-info .info-box #goback-button a:hover,
-    #layout-info .info-box #goback-button a:focus,
-    #layout-info .info-box #goback-button a:visited { text-decoration: none; }
 
 /* }}} layout-info
  *
