--- a/templates/share.html
+++ b/templates/share.html
@@ -20,7 +20,7 @@
   <div id="layout-info">
     <div class="info-box">
       {% include info.html %}
-      <a href="/"><div id="goback-button">&lt;- 回到首页</div></a>
+      <a class="goback" href="/"><div id="goback-button">&lt;- 回到首页</div></a>
     </div>
   </div>
   <div id="layout-list">{% block list %}{% end %}</div>
