--- a/templates/share.html
+++ b/templates/share.html
@@ -14,7 +14,7 @@
       <div class="text">
         <span id="text-loli">LOLI</span><span id="text-dot">・</span>
       </div>
-      <span id="text-lu">撸</span>
+      <span id="text-lu">LU</span>
     </div>
   </div>
   <div id="layout-info">
