--- a/templates/index.html
+++ b/templates/index.html
@@ -59,16 +59,19 @@
   window.onresize = OnResize;
 
   //load next page
+  var next_page_sent = false;
   $(".task-list").bind("scroll", function() {
-    if ($(".task-list .push-bottom").offset().top  < $(window).height() * 1.2) {
+    if ($(".task-list .push-bottom").offset().top  < $(window).height() * 1.2 && !next_page_sent) {
       // load next page
+      next_page_sent = true;
       $.get("/next",
-            {s: $(".task-item:last").attr("data-task-id")},
+            {s: last_task_id},
             function(content) {
               if ($.trim(content) == "") {
                 $(".task-list").unbind("scroll");
               } else {
                 $(".task-list .push-bottom").before(content);
+                next_page_sent = false;
               }
             });
     }
