add api get task process, more effective task manager
1. add lixian api get_task_process, let you get a info with task id
2. pre fix lixian url
3. task manger only update when after a visit.
4. task manger only update tasks witch in in database
5. fix tpl bugs: title/taskname which is less then 15
6. failed/pause has it's own background color now
7. async process will send/raise Exception

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>LOLI.撸</title>
+<title>迅雷离线分享・LOLI.LU</title>
 <!--[if IE]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
