--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -1,9 +1,7 @@
 {% for task in tasks %}
 <li class="task-item" data-task-id="{{ task.id }}">
-  {% if task.status in ('waiting', 'downloading') %}
   <div class="process-bar {{ task.status }}" style="width: {{ 100-task.process }}%"></div>
-  {% end %}
-  <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task.id }}" target="_blank" title="{{ task.taskname }}"><div class="tname"><span class="p1">{{ task.taskname > 15 and task.taskname[:-15] or task.taskname }}</span><span class="p2">{{ task.taskname > 15 and task.taskname[-15:]}}</span></div></a>
+  <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task.id }}" target="_blank" title="{{ task.taskname }}"><div class="tname"><span class="p1">{{ len(task.taskname) > 15 and task.taskname[:-15] or task.taskname }}</span><span class="p2">{{ len(task.taskname) > 15 and task.taskname[-15:] or "" }}</span></div></a>
   <div class="info"><span class="file-size">{{ format_size(task.size) }}</span><span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span></div>
   <div class="clearfix"></div>
 </li>
