auto fix tasks which has no files, fix add_task bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 {% block list %}
 <div class="add-task-box">
   <div class="add-task">
-    <form onsubmit="return add_task() and false;">
+    <form onsubmit="return add_task();">
       <input name="task-url" id="task-url" />
     </form>
     <div class="add-task-bottom">+</div>
